--- a/resources/css/cs_style.css
+++ b/resources/css/cs_style.css
@@ -4,3 +4,45 @@
 #vendor, #buyer {
     cursor: pointer;
 }
+
+#navigationBar {
+    color:white;
+}
+
+
+.list-group a {
+    font-size: 1.5rem;
+    box-shadow: inset 0 0 0 0 black;
+    color: black;
+    margin-bottom: .5rem;
+    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+  }
+  .list-group a:hover {
+    box-shadow: inset 400px 0 0 0 rgb(140,82,255);
+    color: rgb(253, 253, 253);
+  }
+
+  /* LOGIN PAGE */
+  .divider:after,
+.divider:before {
+content: "";
+flex: 1;
+height: 1px;
+background: #eee;
+}
+.h-custom {
+height: calc(100% - 73px);
+}
+@media (max-width: 450px) {
+.h-custom {
+height: 100%;
+}
+}
+
+
+/* responsiveness */
+@media screen and (max-width:540px){
+    .centerOnMobile {
+      text-align:center
+    }
+  }
