--- a/resources/css/cs_style.css
+++ b/resources/css/cs_style.css
@@ -39,6 +39,17 @@ height: 100%;
 }
 }
 
+/* Profile */
+
+#picture {
+  opacity: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+
+
+
 /* .carousel-inner .carousel-item img {
 
   max-height: 80% !important;
