add buyer profile
add buyer profile
add table subview for buyer profile

--- a/resources/css/cs_style.css
+++ b/resources/css/cs_style.css
@@ -47,6 +47,11 @@ height: 100%;
   z-index: -1;
 }
 
+/* table */
+.table_body {
+max-height: clamp(5em,10vh,250px) !important;
+overflow: auto !important;
+}
 
 
 
